crates/api/tests/snapshots/snapshots__err_invalid_token.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "invalid_token",
      "message": "invalid token"
    }
  },
  "status": 401
}
