crates/api/tests/snapshots/snapshots__err_missing_token.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "unauthorized",
      "message": "missing bearer token"
    }
  },
  "status": 401
}
