crates/api/tests/snapshots/snapshots__err_scan_in_progress.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "scan_in_progress",
      "message": "scan already in progress"
    }
  },
  "status": 409
}
