crates/api/tests/snapshots/snapshots__err_session_not_found.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "session_not_found",
      "message": "session not found"
    }
  },
  "status": 404
}
