crates/api/tests/snapshots/snapshots__err_unknown_job_state.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unknown job state: sideways"
    }
  },
  "status": 400
}
