crates/api/tests/snapshots/snapshots__err_unknown_link_code.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "unknown_link_code",
      "message": "unknown or expired link code"
    }
  },
  "status": 404
}
