crates/api/tests/snapshots/snapshots__err_username_taken.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "username_taken",
      "message": "username already taken"
    }
  },
  "status": 409
}
