crates/api/tests/snapshots/snapshots__err_version_not_found.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_found",
      "message": "catalog entity not found"
    }
  },
  "status": 404
}
