crates/api/tests/snapshots/snapshots__genres_bad_kind.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unknown kind: episode"
    }
  },
  "status": 400
}
