crates/api/tests/snapshots/snapshots__genres_series.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": [
    {
      "id": "g-action",
      "name": "Action"
    }
  ],
  "status": 200
}
