crates/api/tests/snapshots/snapshots__libraries_create.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "created_at": "[created_at]",
    "id": "lib-1",
    "kind": "movie",
    "metadata_sources": [
      "tmdb"
    ],
    "name": "New Library",
    "origin": "local",
    "roots": [
      "/media/new"
    ],
    "scan_schedule": null,
    "updated_at": "[updated_at]",
    "watcher": "manual"
  },
  "status": 201
}
